--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -1,5 +1,10 @@
-<div class="center">
-  <img src="/assets/logo_p6.png" alt="logo" />
-  <h1>Welcome to MDD</h1>
-  <button mat-raised-button color="primary" (click)="start()">Commencer</button>
+<div class="home-container">
+
+  <img src="/assets/logo_p6.png" alt="MDD Logo" class="logo" />
+
+  <nav class="home-nav">
+    <a routerLink="/login" class="home-link">Se connecter</a>
+    <a routerLink="/register" class="home-link">S’inscrire</a>
+  </nav>
 </div>
+
