--- a/front/src/app/pages/article-create/article-create.component.scss
+++ b/front/src/app/pages/article-create/article-create.component.scss
@@ -1,5 +1,5 @@
-.auth-form {
-  max-width: 400px;
+.article-form {
+  max-width: 600px;
   margin: 2rem auto;
   display: flex;
   flex-direction: column;
@@ -8,8 +8,4 @@
 .error {
   color: red;
   font-size: 0.875rem;
-}
-.switch {
-  text-align: center;
-  margin-top: 1rem;
 }
