--- a/front/src/app/shared/components/navbar/navbar.component.html
+++ b/front/src/app/shared/components/navbar/navbar.component.html
@@ -1,21 +1,18 @@
 <mat-toolbar color="primary">
-  <!-- Logo cliquable vers l'accueil -->
+
   <img src="/assets/logo_p6.png" alt="MDD" class="logo" (click)="goHome()" />
 
-  <!-- Espace flex -->
   <span class="spacer"></span>
 
-  <!-- Menu desktop -->
   <nav class="desktop-menu">
     <button mat-button routerLink="/articles">Articles</button>
     <button mat-button routerLink="/topics">Thèmes</button>
     <button mat-button (click)="logout()">Se déconnecter</button>
-    <button mat-icon-button routerLink="/profile">
-      <mat-icon>person</mat-icon>
-    </button>
+<button mat-icon-button routerLink="/me">
+  <mat-icon>person</mat-icon>
+</button>
   </nav>
 
-  <!-- Bouton hamburger mobile -->
   <button mat-icon-button class="mobile-menu" (click)="drawer.toggle()">
     <mat-icon>menu</mat-icon>
   </button>
@@ -26,5 +23,8 @@
     <button mat-list-item routerLink="/articles">Articles</button>
     <button mat-list-item routerLink="/topics">Thèmes</button>
     <button mat-list-item (click)="logout()">Se déconnecter</button>
+    <button mat-icon-button routerLink="/me">
+  <mat-icon>person</mat-icon>
+</button>
   </mat-drawer>
 </mat-drawer-container>
