--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,2 +1,27 @@
-<app-navbar *ngIf="auth.isLogged()"></app-navbar>
-<router-outlet></router-outlet>
+<ng-container *ngIf="!isHomePage()">
+  <mat-drawer-container class="main-container">
+<!-- Modifiez votre drawer comme ceci -->
+<mat-drawer #drawer mode="over" position="end" class="drawer-content">
+  <div class="menu-items"> <!-- Nouveau conteneur pour les boutons principaux -->
+     <button *ngIf="auth.isLogged()" mat-raised-button class="drawer-btn logout" (click)="navbar.logout(); drawer.close()">Se déconnecter</button>
+    <button *ngIf="auth.isLogged()" mat-raised-button class="drawer-btn" routerLink="/articles" (click)="drawer.close()">Articles</button>
+    <button *ngIf="auth.isLogged()" mat-raised-button class="drawer-btn" routerLink="/topics" (click)="drawer.close()">Thèmes</button>
+  </div>
+  
+  <div class="user-container"> <!-- Conteneur pour le bouton utilisateur -->
+    <button *ngIf="auth.isLogged()" mat-icon-button class="user-btn" routerLink="/me" (click)="drawer.close()" aria-label="Profil">
+      <mat-icon>person</mat-icon>
+    </button>
+  </div>
+</mat-drawer>
+    <mat-drawer-content>
+      <app-navbar [drawer]="drawer" #navbar [isVisitor]="!auth.isLogged()"></app-navbar>
+      <router-outlet></router-outlet>
+    </mat-drawer-content>
+  </mat-drawer-container>
+</ng-container>
+
+<!-- En dehors du ng-container, mets juste le <router-outlet> pour la home -->
+<ng-container *ngIf="isHomePage()">
+  <router-outlet></router-outlet>
+</ng-container>
