--- a/front/src/app/pages/articles-list/articles.component.html
+++ b/front/src/app/pages/articles-list/articles.component.html
@@ -1,31 +1,27 @@
 <div class="articles-page">
   <div class="header">
-    <button mat-raised-button color="primary" class="purple-btn" routerLink="/articles/new">
+    <button mat-raised-button color="primary" (click)="create()">
       Créer un article
     </button>
-<button mat-stroked-button class="sort-btn" (click)="sortByDate()">
-  Trier par date
-</button>
-
+    <button mat-stroked-button (click)="sortByDate()">
+      Trier par 
+      <mat-icon>
+        {{ sortOldestFirst ? 'arrow_upward' : 'arrow_downward' }}
+      </mat-icon>
+    </button>
   </div>
 
   <div class="articles-container">
-    <mat-card
-      *ngFor="let a of articles"
-      class="article-card"
-      routerLink="/articles/{{ a.id }}"
-    >
-<mat-card-header>
-  <mat-card-title>{{ a.title }}</mat-card-title>
-  <mat-card-subtitle>
-     <div style="margin-top: 10px;"></div>
-    {{ a.createdAt | date:'dd/MM/yyyy' }} — {{ a.authorName || 'Non renseigné' }}
-  </mat-card-subtitle>
-</mat-card-header>
-<mat-card-content>
-  <div style="margin-top: 5px;"></div> <!-- Saut de ligne visuel -->
-  {{ a.content | slice:0:120 }}…
-</mat-card-content>
+    <mat-card *ngFor="let a of articles" class="article-card" (click)="view(a.id)">
+      <mat-card-header>
+        <mat-card-title>{{ a.title }}</mat-card-title>
+        <mat-card-subtitle>
+            {{ a.createdAt | date:'dd/MM/yyyy' }} <span style="margin: 0 20px;"></span> {{ a.authorName || 'Non renseigné' }}
+        </mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        {{ a.content | slice:0:120 }}…
+      </mat-card-content>
     </mat-card>
   </div>
 </div>
