--- a/front/src/app/pages/auth-register/register.component.html
+++ b/front/src/app/pages/auth-register/register.component.html
@@ -3,8 +3,8 @@
 
   <mat-form-field appearance="fill">
     <mat-label>Nom d’utilisateur</mat-label>
-    <input matInput formControlName="username" />
-    <mat-error *ngIf="registerForm.get('username')?.hasError('required')">
+    <input matInput formControlName="name" />
+    <mat-error *ngIf="registerForm.get('name')?.hasError('required')">
       Nom d’utilisateur requis
     </mat-error>
   </mat-form-field>
