--- a/front/src/app/pages/articles-list/articles.component.html
+++ b/front/src/app/pages/articles-list/articles.component.html
@@ -12,16 +12,26 @@
   </div>
 
   <div class="articles-container">
-    <mat-card *ngFor="let a of articles" class="article-card" (click)="view(a.id)">
+    <mat-card
+      *ngFor="let a of filteredArticles"
+      class="article-card"
+      (click)="view(a.id)"
+    >
       <mat-card-header>
         <mat-card-title>{{ a.title }}</mat-card-title>
         <mat-card-subtitle>
-            {{ a.createdAt | date:'dd/MM/yyyy' }} <span style="margin: 0 20px;"></span> {{ a.authorName || 'Non renseigné' }}
+          {{ a.createdAt | date:'dd/MM/yyyy' }}
+          <span style="margin: 0 20px;"></span>
+          {{ a.authorName || 'Non renseigné' }}
         </mat-card-subtitle>
       </mat-card-header>
       <mat-card-content>
         {{ a.content | slice:0:120 }}…
       </mat-card-content>
     </mat-card>
+    <!-- Si aucun article trouvé, on peut afficher un message -->
+    <div *ngIf="filteredArticles.length === 0" class="no-articles">
+      Vous n’êtes abonné à aucun thème ou il n’y a pas d’articles pour vos abonnements.
+    </div>
   </div>
 </div>
