--- a/front/src/app/pages/articles-list/articles.component.scss
+++ b/front/src/app/pages/articles-list/articles.component.scss
@@ -25,7 +25,7 @@
 }
 
 .article-card {
-  background: #f8f6ff;
+  background: #ffffff;
   border-radius: 1.5rem;
   box-shadow: 0 4px 24px rgba(80, 32, 143, 0.09);
   padding: 1.5rem 1.5rem 1.5rem 1.5rem;
@@ -50,7 +50,7 @@
   }
 
   p {
-    color: #555;
+    color: #000000;
     margin: 0 0 1.4rem 0;
     flex: 1 1 auto;
     font-size: 1.05rem;
@@ -69,7 +69,7 @@
 
     &.mat-primary {
       background: #7d53e0;
-      color: #fff;
+      color: #ffffff;
 
       &:hover {
         background: #5320a8;
@@ -77,7 +77,7 @@
     }
     &.mat-accent,
     &[disabled] {
-      background: #e7e7eb;
+      background: #ffffff;
       color: #999;
       cursor: not-allowed;
     }
